<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="by.gdgminsk.filepermissionsdemo.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_default"
            app:layout_constraintBottom_toTopOf="@+id/storage_switch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <RadioGroup
            android:id="@+id/storage_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:checkedButton="@+id/storage_switch_common"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/load_image">

            <RadioButton
                android:id="@+id/storage_switch_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_common_storage"/>

            <RadioButton
                android:id="@+id/storage_switch_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_application_storage"/>
        </RadioGroup>

        <Button
            android:id="@+id/load_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:minWidth="150dp"
            android:text="@string/btn_load"
            app:layout_constraintLeft_toRightOf="@+id/storage_switch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/storage_switch"
            app:layout_constraintBottom_toBottomOf="@+id/storage_switch"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#d6d6d6"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/storage_switch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RadioGroup
            android:id="@+id/migration_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:checkedButton="@+id/migration_switch_java_move"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/migrate_image">

            <RadioButton
                android:id="@+id/migration_switch_java_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/migration_java_move"/>

            <RadioButton
                android:id="@+id/migration_switch_native_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/migration_native_move"/>

            <RadioButton
                android:id="@+id/migration_switch_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/migration_copy"/>

        </RadioGroup>

        <Button
            android:id="@+id/migrate_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:text="@string/btn_migrate"
            app:layout_constraintLeft_toRightOf="@+id/migration_switch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/migration_switch"
            app:layout_constraintBottom_toBottomOf="@+id/migration_switch"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>